sumo/tests/duarouter/alternatives/style2_input/errors/route/route_cost_empty/errors.duarouter
Error: Attribute 'cost' in definition of route(alternative) '!1' is empty.
Quitting (on error).
